--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 	
 	<title>PLAYER</title>
 		<meta charset="UTF-8">
-		<script type="text/javascript" src="//masplay.000webhostapp.com/radio_js_tools.0.9.1.js" ></script>
+		<script type="text/javascript" src="/radio_js_tools.0.9.1.js" ></script>
 	</head>
 	<body>
 
