--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 	
 	<title>PLAYER</title>
 		<meta charset="UTF-8">
-		<script type="text/javascript" src="https://raw.githubusercontent.com/c-a-p-120/player-radio-estacion-mix/0611dc33fef6b1c03a7d080f05fcc16181e85ef3/radio_js_tools.0.9.1.js" ></script>
+		<script type="text/javascript" src="radio_js_tools.0.9.1.js" ></script>
 	</head>
 	<body>
 
