--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     font-family: monospace, Arial;
 }
 body {
-background-image: url(https://e0.pxfuel.com/wallpapers/157/268/desktop-wallpaper-headphones-vector-girl-face-curls-microphone.jpg);
+background-image: url(https://images4.alphacoders.com/227/227438.png);
 background-position: center center;
 background-repeat: no-repeat;
 background-attachment: fixed;
