--- a/Player3.html
+++ b/Player3.html
@@ -56,8 +56,10 @@ background-color: #66999;
         <script src="https://mejorenlaradio.com/player/luna/js/lunaradio.min.js"></script>
         <div id="lunaradio" style="  height:300px;"></div>
       
-	  
-	  <script>
+	 <td height="300" align="center"><script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script src="https://masplay.000webhostapp.com/lunaradio-sincors.js"></script>
+        <div id="lunaradio" style="  height:300px;"></div>
+  <script>
      jQuery(document).ready(function($) {
 	 $("#lunaradio").lunaradio({
 		userinterface: "big",
