--- a/Player3.html
+++ b/Player3.html
@@ -1,6 +1,6 @@
 <title>PLAYER</title>
 		<meta charset="UTF-8">
-		<script type="text/javascript" src="https://c-a-p-120.github.io/player-radio-estacion-mix/radio_js_tools.0.9.1.js" ></script>
+		<script type="text/javascript" src="radio_js_tools.0.9.1.js" ></script>
 	</head>
 	<body>
    
