--- a/Player3.html
+++ b/Player3.html
@@ -83,7 +83,7 @@ background-color: #66999;
   fontname: "Playball",
   googlefont: "",
   fontratio: "0.9",
-  radioname: "ESCUCHAS BUENA MISICA", //nombre de radio
+  radioname: "Escuchar la mejor música", //nombre de radio
   scroll: "true",
   coverimage: "https://image.jimcdn.com/app/cms/image/transf/dimension=350x10000:format=png/path/sc40a039d49acf98a/image/icbe12cae2b3da2d2/version/1628894274/image.png", //link o ruta de logo radio
   onlycoverimage: "false", //true para mostrar solo logo radio
