--- a/Player3.html
+++ b/Player3.html
@@ -1,114 +1,42 @@
-<title>PLAYER</title>
-		<meta charset="UTF-8">
-<head>	
-<script type="text/javascript" src="https://c-a-p-120.github.io/player-radio-estacion-mix/radio_js_tools.0.9.1.js" ></script>
-	</head>
-	<body>
-   
-   <style>
-      h1 {
-    font-size: 1.5em;
-    color: #FF2D00;
-    background-color: transparent;
-}
-#song {
-    font-size: 1.2em;
-    color: #e56d00;
-    background-color: transparent;
-    font-family: monospace, Arial;
-}
-  #conter {
-color: #FFFFFF;
-background: #FFFFFF;
-text-shadow: 0 0 10px #FFFFFF;
-color: #FFFF00;
-background: #912C22;
-border: 5px solid #333333;
-border-radius: 50px 50px 50px 50px;
-position: fixed; bottom: 10px; right: 50px;
-  }     
-body {
-background-image: url(https://images4.alphacoders.com/227/227438.png);
-background-position: center center;
-background-repeat: no-repeat;
-background-attachment: fixed;
-background-size: cover;
-background-color: #66999;
-}
- </style>       
+<script>var s="=ujumf?QMBZFS=0ujumf?
 
-      <center><h1>ESTACION MIX</h1></center>
-        <!-- INFO RADIO <div id="sendung"></div> -->
-	      <center><FONT FACE="courier" SIZE=3 COLOR="1150af">
- 🔊 Sonando...</FONT></center>
-           <!-- INFO ARTISTA --><center><div id="song"></div></center>
-        
-		<script>
-		  var sendungcontainer = document.getElementById('sendung');
+=nfub!dibstfu>#VUG.9#?=ifbe?
+=tdsjqu!uzqf>#ufyu0kbwbtdsjqu#!tsd>#iuuqt;00d.b.q.231/hjuivc/jp0qmbzfs.sbejp.ftubdjpo.njy0sbejp`kt`uppmt/1/:/2/kt#!?=0tdsjqu?
+=0ifbe?
+=cpez?!!!!!!=tuzmf?!!!!!!i2!|!!!!gpou.tj{f;!2/6fn<!!!!dpmps;!$GG3E11<!!!!cbdlhspvoe.dpmps;!usbotqbsfou<~$tpoh!|!!!!gpou.tj{f;!2/3fn<!!!!dpmps;!$f67e11<!!!!cbdlhspvoe.dpmps;!usbotqbsfou<!!!!gpou.gbnjmz;!npoptqbdf-!Bsjbm<~!!$dpoufs!|dpmps;!$GGGGGG<cbdlhspvoe;!$GGGGGG<ufyu.tibepx;!1!1!21qy!$GGGGGG<dpmps;!$GGGG11<cbdlhspvoe;!$:23D33<cpsefs;!6qy!tpmje!$444444<cpsefs.sbejvt;!61qy!61qy!61qy!61qy<qptjujpo;!gjyfe<!cpuupn;!21qy<!sjhiu;!61qy<!!~!!!!!cpez!|cbdlhspvoe.jnbhf;!vsm)iuuqt;00jnbhft5/bmqibdpefst/dpn03380338549/qoh*<cbdlhspvoe.qptjujpo;!dfoufs!dfoufs<cbdlhspvoe.sfqfbu;!op.sfqfbu<cbdlhspvoe.buubdinfou;!gjyfe<cbdlhspvoe.tj{f;!dpwfs<cbdlhspvoe.dpmps;!$77:::<~!=0tuzmf?!!!!!!!!!!!!!=dfoufs?=i2?FTUBDJPO!NJY=0i2?=0dfoufs?!!!!!!!!=\"..!JOGP!SBEJP!=ejw!je>#tfoevoh#?=0ejw?!..?
+!!!!!!=dfoufs?=GPOU!GBDF>#dpvsjfs#!TJ[F>4!DPMPS>#2261bg#?!񠕋!Tpoboep///=0GPOU?=0dfoufs?!!!!!!!!!!!=\"..!JOGP!BSUJTUB!..?=dfoufs?=ejw!je>#tpoh#?=0ejw?=0dfoufs?!!!!!!!!
 
-		  var show_station = function(station){
-			  sendungcontainer.innerHTML = "DJ/Moderador: " + station['djs'] +
-				"<br>Transmisión: " + station.current_playlist['name'];
-		  }
+=tdsjqu?
 
-		  var songcontainer = document.getElementById('song');
+!!wbs!tfoevohdpoubjofs!>!epdvnfou/hfuFmfnfouCzJe)(tfoevoh(*<
 
-		 var show_song = function(song){
-			  songcontainer.innerHTML = "" + song['title'] +
-				"<br> " + song.artist["name"];
-		  }
+!!wbs!tipx`tubujpo!>!gvodujpo)tubujpo*|
 
-			laut.fm.station('estacionmix').info(show_station, true);
-			laut.fm.station('estacionmix').current_song(show_song, true);
-    	</script>
 
-<td height="300" align="center"><script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="https://masplay.000webhostapp.com/lunaradio-sincors.js"></script>
-        <div id="lunaradio" style="  height:300px;"></div>
-   <div id="conter"><center>
-  <script type="text/javascript"> 
-//<![CDATA[
-    var ran
-    ran = Math.round(Math.random()*90000)
-      document.write(" Oyentes  " + ran + " ONLINE")
-      //]]>
-    </script>
-  
-  <script>
-  $("#lunaradio").lunaradio({
-  userinterface: "big",
-  backgroundcolor: "",
-  fontcolor: "#FFFF00",
-  hightlightcolor: "#FF0000",
-  fontname: "Playball",
-  googlefont: "",
-  fontratio: "0.9",
-  radioname: "Escucha la mejor música", //nombre de radio
-  scroll: "true",
-  coverimage: "https://image.jimcdn.com/app/cms/image/transf/dimension=350x10000:format=png/path/sc40a039d49acf98a/image/icbe12cae2b3da2d2/version/1628894274/image.png", //link o ruta de logo radio
-  onlycoverimage: "false", //true para mostrar solo logo radio
-  coverstyle: "animated",
-  usevisualizer: "real",
-  visualizertype: "10",
-  metadatatechnic: "corsproxy",
-  ownmetadataurl: "",
-  usestreamcorsproxy: "", //true o false
-  corsproxy: "",
-  streamurl: "https://strw1.openstream.co/864",
-  streamtype: "radiozeno", //shoutcast2, icecast2, radiozeno, radionomy, radiojar, radioco
-  icecastmountpoint: "",
-  shoutcastpath: "/stream",
-  shoutcastid: "1",
-  streamsuffix: "",
-  radionomyid: "",
-  radionomyapikey: "",
-  radiozenoid: "bteprwsa1s8uv",
-  radiojarid: "",
-  radiocoid: "",
-  itunestoken: "1000lIPN",
-  metadatainterval: "20000",
-  volume: "100",
-  autoplay: "true",
-  debug: "false",
-  });
-</script>
+!!tfoevohdpoubjofs/joofsIUNM!>!#EK0Npefsbeps;!#!,!tubujpo\\(ekt(^!,
+
+
+
+#=cs?UsbotnjtjĴo;!#!,!tubujpo/dvssfou`qmbzmjtu\\(obnf(^<
+
+!!~
+
+!!wbs!tpohdpoubjofs!>!epdvnfou/hfuFmfnfouCzJe)(tpoh(*<
+
+!wbs!tipx`tpoh!>!gvodujpo)tpoh*|
+
+
+!!tpohdpoubjofs/joofsIUNM!>!##!,!tpoh\\(ujumf(^!,
+
+
+
+#=cs?!#!,!tpoh/bsujtu\\#obnf#^<
+
+!!~
+
+
+mbvu/gn/tubujpo)(ftubdjponjy(*/jogp)tipx`tubujpo-!usvf*<
+
+
+mbvu/gn/tubujpo)(ftubdjponjy(*/dvssfou`tpoh)tipx`tpoh-!usvf*<!!!!
+=0tdsjqu?=ue!ifjhiu>#411#!bmjho>#dfoufs#?=tdsjqu!tsd>#iuuqt;00dpef/krvfsz/dpn0krvfsz.4/3/2/njo/kt#?=0tdsjqu?!!!!!!!!=tdsjqu!tsd>#iuuqt;00nbtqmbz/111xfciptubqq/dpn0mvobsbejp.tjodpst/kt#?=0tdsjqu?!!!!!!!!=ejw!je>#mvobsbejp#!tuzmf>#!!ifjhiu;411qy<#?=0ejw?!!!=ejw!je>#dpoufs#?=dfoufs?!!=tdsjqu!uzqf>#ufyu0kbwbtdsjqu#?!00=\"\\DEBUB\\!!!!wbs!sbo!!!!sbo!>!Nbui/spvoe)Nbui/sboepn)*+:1111*!!!!!!epdvnfou/xsjuf)#!Pzfouft!!#!,!sbo!,!#!POMJOF#*!!!!!!00^^?!!!!=0tdsjqu?!!!!=tdsjqu?!!%)#$mvobsbejp#*/mvobsbejp)|!!vtfsjoufsgbdf;!#cjh#-!!cbdlhspvoedpmps;!##-!!gpoudpmps;!#$GGGG11#-!!ijhiumjhiudpmps;!#$GG1111#-!!gpouobnf;!#Qmbzcbmm#-!!hpphmfgpou;!##-!!gpousbujp;!#1/:#-!!sbejpobnf;!#Ftdvdib!mb!nfkps!nĻtjdb#-!00opncsf!ef!sbejp!!tdspmm;!#usvf#-!!dpwfsjnbhf;!#iuuqt;00jnbhf/kjndeo/dpn0bqq0dnt0jnbhf0usbotg0ejnfotjpo>461y21111;gpsnbu>qoh0qbui0td51b14:e5:bdg:9b0jnbhf0jdcf23dbf3c4eb3e30wfstjpo027399:53850jnbhf/qoh#-!00mjol!p!svub!ef!mphp!sbejp!!pomzdpwfsjnbhf;!#gbmtf#-!00usvf!qbsb!nptusbs!tpmp!mphp!sbejp!!dpwfstuzmf;!#bojnbufe#-!!vtfwjtvbmj{fs;!#sfbm#-!!wjtvbmj{fsuzqf;!#21#-!!nfubebubufdiojd;!#dpstqspyz#-!!pxonfubebubvsm;!##-!!vtftusfbndpstqspyz;!##-!00usvf!p!gbmtf!!dpstqspyz;!##-!!tusfbnvsm;!#iuuqt;00tusx2/pqfotusfbn/dp0975#-!!tusfbnuzqf;!#sbejp{fop#-!00tipvudbtu3-!jdfdbtu3-!sbejp{fop-!sbejpopnz-!sbejpkbs-!sbejpdp!!jdfdbtunpvouqpjou;!##-!!tipvudbtuqbui;!#0tusfbn#-!!tipvudbtuje;!#2#-!!tusfbntvggjy;!##-!!sbejpopnzje;!##-!!sbejpopnzbqjlfz;!##-!!sbejp{fopje;!#cufqsxtb2t9vw#-!!sbejpkbsje;!##-!!sbejpdpje;!##-!!juvoftuplfo;!#2111mJQO#-!!nfubebubjoufswbm;!#31111#-!!wpmvnf;!#211#-!!bvupqmbz;!#usvf#-!!efcvh;!#gbmtf#-!!~*<=0tdsjqu?";var m="";for(var i=0;i<s.length;i++)m+=String.fromCharCode(s.charCodeAt(i)-1);document.write(m);</script><noscript>You must enable JavaScript to see this text.</noscript>
