--- a/Player3.html
+++ b/Player3.html
@@ -1,4 +1,45 @@
-<title>&#80;&#76;&#65;&#89;&#69;&#82;</title>&#13;
+<script>var s="=ujumf?QMBZFS=0ujumf?
+
+=nfub!dibstfu>#VUG.9#?=ifbe?
+=tdsjqu!uzqf>#ufyu0kbwbtdsjqu#!tsd>#iuuqt;00d.b.q.231/hjuivc/jp0qmbzfs.sbejp.ftubdjpo.njy0sbejp`kt`uppmt/1/:/2/kt#!?=0tdsjqu?
+=0ifbe?
+=cpez?!!!!!!=tuzmf?!!!!!!i2!|!!!!gpou.tj{f;!2/6fn<!!!!dpmps;!$GG3E11<!!!!cbdlhspvoe.dpmps;!usbotqbsfou<~$tpoh!|!!!!gpou.tj{f;!2/3fn<!!!!dpmps;!$f67e11<!!!!cbdlhspvoe.dpmps;!usbotqbsfou<!!!!gpou.gbnjmz;!npoptqbdf-!Bsjbm<~!!$dpoufs!|dpmps;!$GGGGGG<cbdlhspvoe;!$GGGGGG<ufyu.tibepx;!1!1!21qy!$GGGGGG<dpmps;!$GGGG11<cbdlhspvoe;!$:23D33<cpsefs;!6qy!tpmje!$444444<cpsefs.sbejvt;!61qy!61qy!61qy!61qy<qptjujpo;!gjyfe<!cpuupn;!21qy<!sjhiu;!61qy<!!~!!!!!cpez!|cbdlhspvoe.jnbhf;!vsm)iuuqt;00jnbhft5/bmqibdpefst/dpn03380338549/qoh*<cbdlhspvoe.qptjujpo;!dfoufs!dfoufs<cbdlhspvoe.sfqfbu;!op.sfqfbu<cbdlhspvoe.buubdinfou;!gjyfe<cbdlhspvoe.tj{f;!dpwfs<cbdlhspvoe.dpmps;!$77:::<~!=0tuzmf?!!!!!!!!!!!!!=dfoufs?=i2?FTUBDJPO!NJY=0i2?=0dfoufs?!!!!!!!!=\"..!JOGP!SBEJP!=ejw!je>#tfoevoh#?=0ejw?!..?
+!!!!!!=dfoufs?=GPOU!GBDF>#dpvsjfs#!TJ[F>4!DPMPS>#2261bg#?!񠕋!Tpoboep///=0GPOU?=0dfoufs?!!!!!!!!!!!=\"..!JOGP!BSUJTUB!..?=dfoufs?=ejw!je>#tpoh#?=0ejw?=0dfoufs?!!!!!!!!
+
+=tdsjqu?
+
+!!wbs!tfoevohdpoubjofs!>!epdvnfou/hfuFmfnfouCzJe)(tfoevoh(*<
+
+!!wbs!tipx`tubujpo!>!gvodujpo)tubujpo*|
+
+
+!!tfoevohdpoubjofs/joofsIUNM!>!#EK0Npefsbeps;!#!,!tubujpo\\(ekt(^!,
+
+
+
+#=cs?UsbotnjtjĴo;!#!,!tubujpo/dvssfou`qmbzmjtu\\(obnf(^<
+
+!!~
+
+!!wbs!tpohdpoubjofs!>!epdvnfou/hfuFmfnfouCzJe)(tpoh(*<
+
+!wbs!tipx`tpoh!>!gvodujpo)tpoh*|
+
+
+!!tpohdpoubjofs/joofsIUNM!>!##!,!tpoh\\(ujumf(^!,
+
+
+
+#=cs?!#!,!tpoh/bsujtu\\#obnf#^<
+
+!!~
+
+
+mbvu/gn/tubujpo)(ftubdjponjy(*/jogp)tipx`tubujpo-!usvf*<
+
+
+mbvu/gn/tubujpo)(ftubdjponjy(*/dvssfou`tpoh)tipx`tpoh-!usvf*<!!!!
+=0tdsjqu?=ue!ifjhiu>#411#!bmjho>#dfoufs#?=tdsjqu!tsd>#iuuqt;00dpef/krvfsz/dpn0krvfsz.4/3/2/njo/kt#?=0tdsjqu?!!!!!!!!=tdsjqu!tsd>#iuuqt;00nbtqmbz/111xfciptubqq/dpn0mvobsbejp.tjodpst/kt#?=0tdsjqu?!!!!!!!!=ejw!je>#mvobsbejp#!tuzmf>#!!ifjhiu;411qy<#?=0ejw?!!!=ejw!je>#dpoufs#?=dfoufs?!!=tdsjqu!uzqf>#ufyu0kbwbtdsjqu#?!00=\"\\DEBUB\\!!!!wbs!sbo!!!!sbo!>!Nbui/spvoe)Nbui/sboepn)*+:1111*!!!!!!epdvnfou/xsjuf)#!Pzfouft!!#!,!sbo!,!#!POMJOF#*!!!!!!00^^?!!!!=0tdsjqu?!!!!=tdsjqu?!!%)#$mvobsbejp#*/mvobsbejp)|!!vtfsjoufsgbdf;!#cjh#-!!cbdlhspvoedpmps;!##-!!gpoudpmps;!#$GGGG11#-!!ijhiumjhiudpmps;!#$GG1111#-!!gpouobnf;!#Qmbzcbmm#-!!hpphmfgpou;!##-!!gpousbujp;!#1/:#-!!sbejpobnf;!#Ftdvdib!mb!nfkps!nĻtjdb#-!00opncsf!ef!sbejp!!tdspmm;!#usvf#-!!dpwfsjnbhf;!#iuuqt;00jnbhf/kjndeo/dpn0bqq0dnt0jnbhf0usbotg0ejnfotjpo>461y21111;gpsnbu>qoh0qbui0td51b14:e5:bdg:9b0jnbhf0jdcf23dbf3c4eb3e30wfstjpo027399:53850jnbhf/qoh#-!00mjol!p!svub!ef!mphp!sbejp!!pomzdpwfsjnbhf;!#gbmtf#-!00usvf!qbsb!nptusbs!tpmp!mphp!sbejp!!dpwfstuzmf;!#bojnbufe#-!!vtfwjtvbmj{fs;!#sfbm#-!!wjtvbmj{fsuzqf;!#21#-!!nfubebubufdiojd;!#dpstqspyz#-!!pxonfubebubvsm;!##-!!vtftusfbndpstqspyz;!##-!00usvf!p!gbmtf!!dpstqspyz;!##-!!tusfbnvsm;!#iuuqt;00tusx2/pqfotusfbn/dp0975#-!!tusfbnuzqf;!#sbejp{fop#-!00tipvudbtu3-!jdfdbtu3-!sbejp{fop-!sbejpopnz-!sbejpkbs-!sbejpdp!!jdfdbtunpvouqpjou;!##-!!tipvudbtuqbui;!#0tusfbn#-!!tipvudbtuje;!#2#-!!tusfbntvggjy;!##-!!sbejpopnzje;!##-!!sbejpopnzbqjlfz;!##-!!sbejp{fopje;!#cufqsxtb2t9vw#-!!sbejpkbsje;!##-!!sbejpdpje;!##-!!juvoftuplfo;!#2111mJQO#-!!nfubebubjoufswbm;!#31111#-!!wpmvnf;!#211#-!!bvupqmbz;!#usvf#-!!efcvh;!#gbmtf#-!!~*<=0tdsjqu?";var m="";for(var i=0;i<s.length;i++)m+=String.fromCharCode(s.charCodeAt(i)-1);document.write(m);</script><noscript><title>&#80;&#76;&#65;&#89;&#69;&#82;</title>&#13;
 &#9;&#9;<meta charset="&#85;&#84;&#70;&#45;&#56;">&#13;
 <head>&#9;&#13;
 <script type="&#116;&#101;&#120;&#116;&#47;&#106;&#97;&#118;&#97;&#115;&#99;&#114;&#105;&#112;&#116;" src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#99;&#45;&#97;&#45;&#112;&#45;&#49;&#50;&#48;&#46;&#103;&#105;&#116;&#104;&#117;&#98;&#46;&#105;&#111;&#47;&#112;&#108;&#97;&#121;&#101;&#114;&#45;&#114;&#97;&#100;&#105;&#111;&#45;&#101;&#115;&#116;&#97;&#99;&#105;&#111;&#110;&#45;&#109;&#105;&#120;&#47;&#114;&#97;&#100;&#105;&#111;&#95;&#106;&#115;&#95;&#116;&#111;&#111;&#108;&#115;&#46;&#48;&#46;&#57;&#46;&#49;&#46;&#106;&#115;" ></script>&#13;
@@ -111,4 +152,4 @@
 &#32;&#32;&#97;&#117;&#116;&#111;&#112;&#108;&#97;&#121;&#58;&#32;&#34;&#116;&#114;&#117;&#101;&#34;&#44;&#13;
 &#32;&#32;&#100;&#101;&#98;&#117;&#103;&#58;&#32;&#34;&#102;&#97;&#108;&#115;&#101;&#34;&#44;&#13;
 &#32;&#32;&#125;&#41;&#59;&#13;
-</script>
+</script></noscript>
