--- a/Player3.html
+++ b/Player3.html
@@ -1,114 +1,1 @@
-<title>PLAYER</title>
-		<meta charset="UTF-8">
-<head>	
-<script type="text/javascript" src="radio_js_tools.0.9.1.js" ></script>
-	</head>
-	<body>
-   
-   <style>
-      h1 {
-    font-size: 1.5em;
-    color: #FF2D00;
-    background-color: transparent;
-}
-#song {
-    font-size: 1.2em;
-    color: #e56d00;
-    background-color: transparent;
-    font-family: monospace, Arial;
-}
-  #conter {
-color: #FFFFFF;
-background: #FFFFFF;
-text-shadow: 0 0 10px #FFFFFF;
-color: #FFFF00;
-background: #912C22;
-border: 5px solid #333333;
-border-radius: 50px 50px 50px 50px;
-position: fixed; bottom: 10px; right: 50px;
-  }     
-body {
-background-image: url(https://images4.alphacoders.com/227/227438.png);
-background-position: center center;
-background-repeat: no-repeat;
-background-attachment: fixed;
-background-size: cover;
-background-color: #66999;
-}
- </style>       
-
-      <center><h1>ESTACION MIX</h1></center>
-        <!-- INFO RADIO <div id="sendung"></div> -->
-	      <center><FONT FACE="courier" SIZE=3 COLOR="1150af">
- 🔊 Sonando...</FONT></center>
-           <!-- INFO ARTISTA --><center><div id="song"></div></center>
-        
-		<script>
-		  var sendungcontainer = document.getElementById('sendung');
-
-		  var show_station = function(station){
-			  sendungcontainer.innerHTML = "DJ/Moderador: " + station['djs'] +
-				"<br>Transmisión: " + station.current_playlist['name'];
-		  }
-
-		  var songcontainer = document.getElementById('song');
-
-		 var show_song = function(song){
-			  songcontainer.innerHTML = "" + song['title'] +
-				"<br> " + song.artist["name"];
-		  }
-
-			laut.fm.station('estacionmix').info(show_station, true);
-			laut.fm.station('estacionmix').current_song(show_song, true);
-    	</script>
-
-<td height="300" align="center"><script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="https://masplay.000webhostapp.com/lunaradio-sincors.js"></script>
-        <div id="lunaradio" style="  height:300px;"></div>
-   <div id="conter"><center>
-  <script type="text/javascript"> 
-//<![CDATA[
-    var ran
-    ran = Math.round(Math.random()*90000)
-      document.write(" Oyentes  " + ran + " ONLINE")
-      //]]>
-    </script>
-  
-  <script>
-  $("#lunaradio").lunaradio({
-  userinterface: "big",
-  backgroundcolor: "",
-  fontcolor: "#FFFF00",
-  hightlightcolor: "#FF0000",
-  fontname: "Playball",
-  googlefont: "",
-  fontratio: "0.9",
-  radioname: "Escucha la mejor música", //nombre de radio
-  scroll: "true",
-  coverimage: "https://image.jimcdn.com/app/cms/image/transf/dimension=350x10000:format=png/path/sc40a039d49acf98a/image/icbe12cae2b3da2d2/version/1628894274/image.png", //link o ruta de logo radio
-  onlycoverimage: "false", //true para mostrar solo logo radio
-  coverstyle: "animated",
-  usevisualizer: "real",
-  visualizertype: "10",
-  metadatatechnic: "corsproxy",
-  ownmetadataurl: "",
-  usestreamcorsproxy: "", //true o false
-  corsproxy: "",
-  streamurl: "https://strw1.openstream.co/864",
-  streamtype: "radiozeno", //shoutcast2, icecast2, radiozeno, radionomy, radiojar, radioco
-  icecastmountpoint: "",
-  shoutcastpath: "/stream",
-  shoutcastid: "1",
-  streamsuffix: "",
-  radionomyid: "",
-  radionomyapikey: "",
-  radiozenoid: "bteprwsa1s8uv",
-  radiojarid: "",
-  radiocoid: "",
-  itunestoken: "1000lIPN",
-  metadatainterval: "20000",
-  volume: "100",
-  autoplay: "true",
-  debug: "false",
-  });
-</script>
+<script language="javascript">document.write(unescape('%3C%74%69%74%6C%65%3E%50%4C%41%59%45%52%3C%2F%74%69%74%6C%65%3E%0A%09%09%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%3C%68%65%61%64%3E%09%0A%3C%73%63%72%69%70%74%20%74%79%70%65%3D%22%74%65%78%74%2F%6A%61%76%61%73%63%72%69%70%74%22%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%63%2D%61%2D%70%2D%31%32%30%2E%67%69%74%68%75%62%2E%69%6F%2F%70%6C%61%79%65%72%2D%72%61%64%69%6F%2D%65%73%74%61%63%69%6F%6E%2D%6D%69%78%2F%72%61%64%69%6F%5F%6A%73%5F%74%6F%6F%6C%73%2E%30%2E%39%2E%31%2E%6A%73%22%20%3E%3C%2F%73%63%72%69%70%74%3E%0A%09%3C%2F%68%65%61%64%3E%0A%09%3C%62%6F%64%79%3E%0A%20%20%20%0A%20%20%20%3C%73%74%79%6C%65%3E%0A%20%20%20%20%20%20%68%31%20%7B%0A%20%20%20%20%66%6F%6E%74%2D%73%69%7A%65%3A%20%31%2E%35%65%6D%3B%0A%20%20%20%20%63%6F%6C%6F%72%3A%20%23%46%46%32%44%30%30%3B%0A%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%74%72%61%6E%73%70%61%72%65%6E%74%3B%0A%7D%0A%23%73%6F%6E%67%20%7B%0A%20%20%20%20%66%6F%6E%74%2D%73%69%7A%65%3A%20%31%2E%32%65%6D%3B%0A%20%20%20%20%63%6F%6C%6F%72%3A%20%23%65%35%36%64%30%30%3B%0A%20%20%20%20%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%74%72%61%6E%73%70%61%72%65%6E%74%3B%0A%20%20%20%20%66%6F%6E%74%2D%66%61%6D%69%6C%79%3A%20%6D%6F%6E%6F%73%70%61%63%65%2C%20%41%72%69%61%6C%3B%0A%7D%0A%20%20%23%63%6F%6E%74%65%72%20%7B%0A%63%6F%6C%6F%72%3A%20%23%46%46%46%46%46%46%3B%0A%62%61%63%6B%67%72%6F%75%6E%64%3A%20%23%46%46%46%46%46%46%3B%0A%74%65%78%74%2D%73%68%61%64%6F%77%3A%20%30%20%30%20%31%30%70%78%20%23%46%46%46%46%46%46%3B%0A%63%6F%6C%6F%72%3A%20%23%46%46%46%46%30%30%3B%0A%62%61%63%6B%67%72%6F%75%6E%64%3A%20%23%39%31%32%43%32%32%3B%0A%62%6F%72%64%65%72%3A%20%35%70%78%20%73%6F%6C%69%64%20%23%33%33%33%33%33%33%3B%0A%62%6F%72%64%65%72%2D%72%61%64%69%75%73%3A%20%35%30%70%78%20%35%30%70%78%20%35%30%70%78%20%35%30%70%78%3B%0A%70%6F%73%69%74%69%6F%6E%3A%20%66%69%78%65%64%3B%20%62%6F%74%74%6F%6D%3A%20%31%30%70%78%3B%20%72%69%67%68%74%3A%20%35%30%70%78%3B%0A%20%20%7D%20%20%20%20%20%0A%62%6F%64%79%20%7B%0A%62%61%63%6B%67%72%6F%75%6E%64%2D%69%6D%61%67%65%3A%20%75%72%6C%28%68%74%74%70%73%3A%2F%2F%69%6D%61%67%65%73%34%2E%61%6C%70%68%61%63%6F%64%65%72%73%2E%63%6F%6D%2F%32%32%37%2F%32%32%37%34%33%38%2E%70%6E%67%29%3B%0A%62%61%63%6B%67%72%6F%75%6E%64%2D%70%6F%73%69%74%69%6F%6E%3A%20%63%65%6E%74%65%72%20%63%65%6E%74%65%72%3B%0A%62%61%63%6B%67%72%6F%75%6E%64%2D%72%65%70%65%61%74%3A%20%6E%6F%2D%72%65%70%65%61%74%3B%0A%62%61%63%6B%67%72%6F%75%6E%64%2D%61%74%74%61%63%68%6D%65%6E%74%3A%20%66%69%78%65%64%3B%0A%62%61%63%6B%67%72%6F%75%6E%64%2D%73%69%7A%65%3A%20%63%6F%76%65%72%3B%0A%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%23%36%36%39%39%39%3B%0A%7D%0A%20%3C%2F%73%74%79%6C%65%3E%20%20%20%20%20%20%20%0A%0A%20%20%20%20%20%20%3C%63%65%6E%74%65%72%3E%3C%68%31%3E%45%53%54%41%43%49%4F%4E%20%4D%49%58%3C%2F%68%31%3E%3C%2F%63%65%6E%74%65%72%3E%0A%20%20%20%20%20%20%20%20%3C%21%2D%2D%20%49%4E%46%4F%20%52%41%44%49%4F%20%3C%64%69%76%20%69%64%3D%22%73%65%6E%64%75%6E%67%22%3E%3C%2F%64%69%76%3E%20%2D%2D%3E%0A%09%20%20%20%20%20%20%3C%63%65%6E%74%65%72%3E%3C%46%4F%4E%54%20%46%41%43%45%3D%22%63%6F%75%72%69%65%72%22%20%53%49%5A%45%3D%33%20%43%4F%4C%4F%52%3D%22%31%31%35%30%61%66%22%3E%0A%20%3D%0A%20%53%6F%6E%61%6E%64%6F%2E%2E%2E%3C%2F%46%4F%4E%54%3E%3C%2F%63%65%6E%74%65%72%3E%0A%20%20%20%20%20%20%20%20%20%20%20%3C%21%2D%2D%20%49%4E%46%4F%20%41%52%54%49%53%54%41%20%2D%2D%3E%3C%63%65%6E%74%65%72%3E%3C%64%69%76%20%69%64%3D%22%73%6F%6E%67%22%3E%3C%2F%64%69%76%3E%3C%2F%63%65%6E%74%65%72%3E%0A%20%20%20%20%20%20%20%20%0A%09%09%3C%73%63%72%69%70%74%3E%0A%09%09%20%20%76%61%72%20%73%65%6E%64%75%6E%67%63%6F%6E%74%61%69%6E%65%72%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%27%73%65%6E%64%75%6E%67%27%29%3B%0A%0A%09%09%20%20%76%61%72%20%73%68%6F%77%5F%73%74%61%74%69%6F%6E%20%3D%20%66%75%6E%63%74%69%6F%6E%28%73%74%61%74%69%6F%6E%29%7B%0A%09%09%09%20%20%73%65%6E%64%75%6E%67%63%6F%6E%74%61%69%6E%65%72%2E%69%6E%6E%65%72%48%54%4D%4C%20%3D%20%22%44%4A%2F%4D%6F%64%65%72%61%64%6F%72%3A%20%22%20%2B%20%73%74%61%74%69%6F%6E%5B%27%64%6A%73%27%5D%20%2B%0A%09%09%09%09%22%3C%62%72%3E%54%72%61%6E%73%6D%69%73%69%F3%6E%3A%20%22%20%2B%20%73%74%61%74%69%6F%6E%2E%63%75%72%72%65%6E%74%5F%70%6C%61%79%6C%69%73%74%5B%27%6E%61%6D%65%27%5D%3B%0A%09%09%20%20%7D%0A%0A%09%09%20%20%76%61%72%20%73%6F%6E%67%63%6F%6E%74%61%69%6E%65%72%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%27%73%6F%6E%67%27%29%3B%0A%0A%09%09%20%76%61%72%20%73%68%6F%77%5F%73%6F%6E%67%20%3D%20%66%75%6E%63%74%69%6F%6E%28%73%6F%6E%67%29%7B%0A%09%09%09%20%20%73%6F%6E%67%63%6F%6E%74%61%69%6E%65%72%2E%69%6E%6E%65%72%48%54%4D%4C%20%3D%20%22%22%20%2B%20%73%6F%6E%67%5B%27%74%69%74%6C%65%27%5D%20%2B%0A%09%09%09%09%22%3C%62%72%3E%20%22%20%2B%20%73%6F%6E%67%2E%61%72%74%69%73%74%5B%22%6E%61%6D%65%22%5D%3B%0A%09%09%20%20%7D%0A%0A%09%09%09%6C%61%75%74%2E%66%6D%2E%73%74%61%74%69%6F%6E%28%27%65%73%74%61%63%69%6F%6E%6D%69%78%27%29%2E%69%6E%66%6F%28%73%68%6F%77%5F%73%74%61%74%69%6F%6E%2C%20%74%72%75%65%29%3B%0A%09%09%09%6C%61%75%74%2E%66%6D%2E%73%74%61%74%69%6F%6E%28%27%65%73%74%61%63%69%6F%6E%6D%69%78%27%29%2E%63%75%72%72%65%6E%74%5F%73%6F%6E%67%28%73%68%6F%77%5F%73%6F%6E%67%2C%20%74%72%75%65%29%3B%0A%20%20%20%20%09%3C%2F%73%63%72%69%70%74%3E%0A%0A%3C%74%64%20%68%65%69%67%68%74%3D%22%33%30%30%22%20%61%6C%69%67%6E%3D%22%63%65%6E%74%65%72%22%3E%3C%73%63%72%69%70%74%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%63%6F%64%65%2E%6A%71%75%65%72%79%2E%63%6F%6D%2F%6A%71%75%65%72%79%2D%33%2E%32%2E%31%2E%6D%69%6E%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%6D%61%73%70%6C%61%79%2E%30%30%30%77%65%62%68%6F%73%74%61%70%70%2E%63%6F%6D%2F%6C%75%6E%61%72%61%64%69%6F%2D%73%69%6E%63%6F%72%73%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%20%20%20%20%3C%64%69%76%20%69%64%3D%22%6C%75%6E%61%72%61%64%69%6F%22%20%73%74%79%6C%65%3D%22%20%20%68%65%69%67%68%74%3A%33%30%30%70%78%3B%22%3E%3C%2F%64%69%76%3E%0A%20%20%20%3C%64%69%76%20%69%64%3D%22%63%6F%6E%74%65%72%22%3E%3C%63%65%6E%74%65%72%3E%0A%20%20%3C%73%63%72%69%70%74%20%74%79%70%65%3D%22%74%65%78%74%2F%6A%61%76%61%73%63%72%69%70%74%22%3E%20%0A%2F%2F%3C%21%5B%43%44%41%54%41%5B%0A%20%20%20%20%76%61%72%20%72%61%6E%0A%20%20%20%20%72%61%6E%20%3D%20%4D%61%74%68%2E%72%6F%75%6E%64%28%4D%61%74%68%2E%72%61%6E%64%6F%6D%28%29%2A%39%30%30%30%30%29%0A%20%20%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%77%72%69%74%65%28%22%20%4F%79%65%6E%74%65%73%20%20%22%20%2B%20%72%61%6E%20%2B%20%22%20%4F%4E%4C%49%4E%45%22%29%0A%20%20%20%20%20%20%2F%2F%5D%5D%3E%0A%20%20%20%20%3C%2F%73%63%72%69%70%74%3E%0A%20%20%0A%20%20%3C%73%63%72%69%70%74%3E%0A%20%20%24%28%22%23%6C%75%6E%61%72%61%64%69%6F%22%29%2E%6C%75%6E%61%72%61%64%69%6F%28%7B%0A%20%20%75%73%65%72%69%6E%74%65%72%66%61%63%65%3A%20%22%62%69%67%22%2C%0A%20%20%62%61%63%6B%67%72%6F%75%6E%64%63%6F%6C%6F%72%3A%20%22%22%2C%0A%20%20%66%6F%6E%74%63%6F%6C%6F%72%3A%20%22%23%46%46%46%46%30%30%22%2C%0A%20%20%68%69%67%68%74%6C%69%67%68%74%63%6F%6C%6F%72%3A%20%22%23%46%46%30%30%30%30%22%2C%0A%20%20%66%6F%6E%74%6E%61%6D%65%3A%20%22%50%6C%61%79%62%61%6C%6C%22%2C%0A%20%20%67%6F%6F%67%6C%65%66%6F%6E%74%3A%20%22%22%2C%0A%20%20%66%6F%6E%74%72%61%74%69%6F%3A%20%22%30%2E%39%22%2C%0A%20%20%72%61%64%69%6F%6E%61%6D%65%3A%20%22%45%73%63%75%63%68%61%20%6C%61%20%6D%65%6A%6F%72%20%6D%FA%73%69%63%61%22%2C%20%2F%2F%6E%6F%6D%62%72%65%20%64%65%20%72%61%64%69%6F%0A%20%20%73%63%72%6F%6C%6C%3A%20%22%74%72%75%65%22%2C%0A%20%20%63%6F%76%65%72%69%6D%61%67%65%3A%20%22%68%74%74%70%73%3A%2F%2F%69%6D%61%67%65%2E%6A%69%6D%63%64%6E%2E%63%6F%6D%2F%61%70%70%2F%63%6D%73%2F%69%6D%61%67%65%2F%74%72%61%6E%73%66%2F%64%69%6D%65%6E%73%69%6F%6E%3D%33%35%30%78%31%30%30%30%30%3A%66%6F%72%6D%61%74%3D%70%6E%67%2F%70%61%74%68%2F%73%63%34%30%61%30%33%39%64%34%39%61%63%66%39%38%61%2F%69%6D%61%67%65%2F%69%63%62%65%31%32%63%61%65%32%62%33%64%61%32%64%32%2F%76%65%72%73%69%6F%6E%2F%31%36%32%38%38%39%34%32%37%34%2F%69%6D%61%67%65%2E%70%6E%67%22%2C%20%2F%2F%6C%69%6E%6B%20%6F%20%72%75%74%61%20%64%65%20%6C%6F%67%6F%20%72%61%64%69%6F%0A%20%20%6F%6E%6C%79%63%6F%76%65%72%69%6D%61%67%65%3A%20%22%66%61%6C%73%65%22%2C%20%2F%2F%74%72%75%65%20%70%61%72%61%20%6D%6F%73%74%72%61%72%20%73%6F%6C%6F%20%6C%6F%67%6F%20%72%61%64%69%6F%0A%20%20%63%6F%76%65%72%73%74%79%6C%65%3A%20%22%61%6E%69%6D%61%74%65%64%22%2C%0A%20%20%75%73%65%76%69%73%75%61%6C%69%7A%65%72%3A%20%22%72%65%61%6C%22%2C%0A%20%20%76%69%73%75%61%6C%69%7A%65%72%74%79%70%65%3A%20%22%31%30%22%2C%0A%20%20%6D%65%74%61%64%61%74%61%74%65%63%68%6E%69%63%3A%20%22%63%6F%72%73%70%72%6F%78%79%22%2C%0A%20%20%6F%77%6E%6D%65%74%61%64%61%74%61%75%72%6C%3A%20%22%22%2C%0A%20%20%75%73%65%73%74%72%65%61%6D%63%6F%72%73%70%72%6F%78%79%3A%20%22%22%2C%20%2F%2F%74%72%75%65%20%6F%20%66%61%6C%73%65%0A%20%20%63%6F%72%73%70%72%6F%78%79%3A%20%22%22%2C%0A%20%20%73%74%72%65%61%6D%75%72%6C%3A%20%22%68%74%74%70%73%3A%2F%2F%73%74%72%77%31%2E%6F%70%65%6E%73%74%72%65%61%6D%2E%63%6F%2F%38%36%34%22%2C%0A%20%20%73%74%72%65%61%6D%74%79%70%65%3A%20%22%72%61%64%69%6F%7A%65%6E%6F%22%2C%20%2F%2F%73%68%6F%75%74%63%61%73%74%32%2C%20%69%63%65%63%61%73%74%32%2C%20%72%61%64%69%6F%7A%65%6E%6F%2C%20%72%61%64%69%6F%6E%6F%6D%79%2C%20%72%61%64%69%6F%6A%61%72%2C%20%72%61%64%69%6F%63%6F%0A%20%20%69%63%65%63%61%73%74%6D%6F%75%6E%74%70%6F%69%6E%74%3A%20%22%22%2C%0A%20%20%73%68%6F%75%74%63%61%73%74%70%61%74%68%3A%20%22%2F%73%74%72%65%61%6D%22%2C%0A%20%20%73%68%6F%75%74%63%61%73%74%69%64%3A%20%22%31%22%2C%0A%20%20%73%74%72%65%61%6D%73%75%66%66%69%78%3A%20%22%22%2C%0A%20%20%72%61%64%69%6F%6E%6F%6D%79%69%64%3A%20%22%22%2C%0A%20%20%72%61%64%69%6F%6E%6F%6D%79%61%70%69%6B%65%79%3A%20%22%22%2C%0A%20%20%72%61%64%69%6F%7A%65%6E%6F%69%64%3A%20%22%62%74%65%70%72%77%73%61%31%73%38%75%76%22%2C%0A%20%20%72%61%64%69%6F%6A%61%72%69%64%3A%20%22%22%2C%0A%20%20%72%61%64%69%6F%63%6F%69%64%3A%20%22%22%2C%0A%20%20%69%74%75%6E%65%73%74%6F%6B%65%6E%3A%20%22%31%30%30%30%6C%49%50%4E%22%2C%0A%20%20%6D%65%74%61%64%61%74%61%69%6E%74%65%72%76%61%6C%3A%20%22%32%30%30%30%30%22%2C%0A%20%20%76%6F%6C%75%6D%65%3A%20%22%31%30%30%22%2C%0A%20%20%61%75%74%6F%70%6C%61%79%3A%20%22%74%72%75%65%22%2C%0A%20%20%64%65%62%75%67%3A%20%22%66%61%6C%73%65%22%2C%0A%20%20%7D%29%3B%0A%3C%2F%73%63%72%69%70%74%3E'))</script>
