--- a/Player3.html
+++ b/Player3.html
@@ -94,16 +94,16 @@ background-color: #66999;
   ownmetadataurl: "",
   usestreamcorsproxy: "", //true o false
   corsproxy: "",
-  streamurl: "https://strw1.openstream.co/864",
+  streamurl: "https://stream.zeno.fm/mwdqpn6gbm0uv",
   streamtype: "radiojar", //shoutcast2, icecast2, radiozeno, radionomy, radiojar, radioco
   icecastmountpoint: "",
-  shoutcastpath: "/stream",
+  shoutcastpath: "",
   shoutcastid: "1",
   streamsuffix: "",
   radionomyid: "",
   radionomyapikey: "",
-  radiozenoid: "mwdqpn6gbm0uv",
-  radiojarid: "mwdqpn6gbm0uv",
+  radiozenoid: "",
+  radiojarid: "",
   radiocoid: "",
   itunestoken: "1000lIPN",
   metadatainterval: "20000",
