--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@ jQuery(document).ready(function($) {
 		itunestoken: "1000lIPN",
 		metadatatechnic: "stream-icy-meta",
 		ownmetadataurl: "",
-		streamurl: "https://stream.zeno.fm/mcu4taxu7hhvv",
+		streamurl: "https://stream.zeno.fm",
 		streamtype: "radiojar",
 		icecastmountpoint: "",
 		radionomyid: "",
 		radionomyapikey: "",
-		radiojarid: "",
+		radiojarid: "mcu4taxu7hhvv",
 		radiocoid: "",
 		shoutcastpath: "",
 		shoutcastid: "",
