--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ jQuery(document).ready(function($) {
 		itunestoken: "1000lIPN",
 		metadatatechnic: "stream-icy-meta",
 		ownmetadataurl: "",
-		streamurl: "https://stream.zeno.fm",
+		streamurl: "https://stream.zeno.fm/mcu4taxu7hhvv",
 		streamtype: "radiojar",
 		icecastmountpoint: "",
 		radionomyid: "",
