--- a/Player3.html
+++ b/Player3.html
@@ -94,8 +94,8 @@ background-color: #66999;
   ownmetadataurl: "",
   usestreamcorsproxy: "", //true o false
   corsproxy: "",
-  streamurl: "https://stream.zeno.fm/mwdqpn6gbm0uv",
-  streamtype: "radiojar", //shoutcast2, icecast2, radiozeno, radionomy, radiojar, radioco
+  streamurl: "https://strw1.openstream.co/864",
+  streamtype: "icecast2", //shoutcast2, icecast2, radiozeno, radionomy, radiojar, radioco
   icecastmountpoint: "",
   shoutcastpath: "",
   shoutcastid: "1",
